--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             <button class="carte" id="routeBtn">
                 <span class="material-icons">add_road</span>
             </button> 
+        <button class="carte" id="locateBtn">
+                <span class="material-icons">share</span>
+            </button> 
+            
+            
         </div>
     </main>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
